<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/countryNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_name_label"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/countryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/countryNameLabel"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="United States Of America" />

        <TextView
            android:id="@+id/countryRegionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/country_region_label"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryName" />

        <TextView
            android:id="@+id/countryRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/countryRegionLabel"
            app:layout_constraintTop_toBottomOf="@+id/countryName"
            tools:text="NA" />

        <TextView
            android:id="@+id/countryCodeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:text="@string/country_code_label"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/countryRegion"
            app:layout_constraintTop_toBottomOf="@+id/countryName" />

        <TextView
            android:id="@+id/countryCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/countryCodeLabel"
            app:layout_constraintTop_toBottomOf="@+id/countryName"
            tools:text="US" />

        <TextView
            android:id="@+id/countryCapitalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/country_capital_label"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryRegionLabel" />

        <TextView
            android:id="@+id/countryCapital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/countryCapitalLabel"
            app:layout_constraintTop_toBottomOf="@+id/countryRegion"
            tools:text="Washington, D.C." />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>