<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.views.CountryDetailsFragment">

    <ProgressBar
        android:id="@+id/countriesProgressBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:padding="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/countryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/horizontalDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryName" />

        <TextView
            android:id="@+id/countryRegionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="4dp"
            android:text="@string/country_region_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalDivider" />

        <TextView
            android:id="@+id/countryRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingTop="16dp"
            android:paddingEnd="5dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/countryRegionLabel"
            app:layout_constraintTop_toBottomOf="@+id/horizontalDivider"
            tools:text="NA" />

        <TextView
            android:id="@+id/countryCodeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingTop="16dp"
            android:paddingEnd="5dp"
            android:text="@string/country_code_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/countryRegion"
            app:layout_constraintTop_toBottomOf="@+id/horizontalDivider" />

        <TextView
            android:id="@+id/countryCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingTop="16dp"
            android:paddingEnd="5dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/countryCodeLabel"
            app:layout_constraintTop_toBottomOf="@+id/horizontalDivider"
            tools:text="US" />

        <TextView
            android:id="@+id/countryCapitalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:paddingEnd="4dp"
            android:text="@string/country_capital_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryRegionLabel" />

        <TextView
            android:id="@+id/countryCapital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingTop="10dp"
            android:paddingEnd="5dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/countryCapitalLabel"
            app:layout_constraintTop_toBottomOf="@+id/countryRegion"
            tools:text="Washington, D.C." />

        <TextView
            android:id="@+id/currencyNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:paddingEnd="4dp"
            android:text="@string/country_currency_name_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryCapitalLabel" />

        <TextView
            android:id="@+id/currencyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingTop="10dp"
            android:paddingEnd="5dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/currencyNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/countryCapital"
            tools:text="United States dollar" />

        <TextView
            android:id="@+id/currencySymbolLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:paddingEnd="4dp"
            android:text="@string/country_currency_symbol_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currencyNameLabel" />

        <TextView
            android:id="@+id/currencySymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingTop="10dp"
            android:paddingEnd="5dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/currencySymbolLabel"
            app:layout_constraintTop_toBottomOf="@+id/currencyName"
            tools:text="$" />

        <TextView
            android:id="@+id/languageNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:paddingEnd="4dp"
            android:text="@string/country_language_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currencySymbolLabel" />

        <TextView
            android:id="@+id/languageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingTop="10dp"
            android:paddingEnd="5dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/languageNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/currencySymbol"
            tools:text="English" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>